# mcp-image-gen

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  mcp.rs  tools.rs
tests/: integration.rs
